--- a/assets/html/2026-04-27-web-agent/observatory.html
+++ b/assets/html/2026-04-27-web-agent/observatory.html
@@ -542,7 +542,7 @@
     </div>
 
     <!-- Hidden container with all d-cite elements pre-created for proper numbering -->
-    <div id="citationCache" style="display: none;">
+    <div id="citationCache" style="position: absolute; left: -9999px; width: 1px; height: 1px; opacity: 0; overflow: hidden;" aria-hidden="true">
         <d-cite key="xie2024osworld" data-cite-key="xie2024osworld"></d-cite>
         <d-cite key="rawles2024androidworld" data-cite-key="rawles2024androidworld"></d-cite>
         <d-cite key="kapoor2024omniact" data-cite-key="kapoor2024omniact"></d-cite>
