Fixed all the citation issues

--- a/assets/html/2026-04-27-web-agent/definitions.html
+++ b/assets/html/2026-04-27-web-agent/definitions.html
@@ -204,6 +204,7 @@
         }
     </style>
     <script src="/2026/assets/js/distillpub/template.v2.js"></script>
+    <script src="/2026/assets/js/distillpub/transforms.v2.js"></script>
 </head>
 <body>
     <d-bibliography src="/2026/assets/bibliography/2026-04-27-web-agent.bib"></d-bibliography>
