Observatory is up!

--- a/assets/html/2026-04-27-web-agent/observatory.html
+++ b/assets/html/2026-04-27-web-agent/observatory.html
@@ -557,7 +557,7 @@
         <d-cite key="pmlr-v70-shi17a" data-cite-key="pmlr-v70-shi17a"></d-cite>
         <d-cite key="liu2018reinforcement" data-cite-key="liu2018reinforcement"></d-cite>
         <d-cite key="drouin2024workarena" data-cite-key="drouin2024workarena"></d-cite>
-        <d-cite key="boisvert2024workarena++" data-cite-key="boisvert2024workarena++"></d-cite>
+        <d-cite key="boisvert2024workarena" data-cite-key="boisvert2024workarena"></d-cite>
         <d-cite key="nogueira2016end" data-cite-key="nogueira2016end"></d-cite>
         <d-cite key="zaheer2022learning" data-cite-key="zaheer2022learning"></d-cite>
         <d-cite key="nakano2021webgpt" data-cite-key="nakano2021webgpt"></d-cite>
@@ -881,7 +881,7 @@
                 tasks: "Complex real-world enterprise tasks", 
                 execution: "Yes (validator checks the page)", 
                 examples: "N/A", 
-                citeKey: "boisvert2024workarena++"
+                citeKey: "boisvert2024workarena"
             },
             { 
                 name: "BearCubs", 
@@ -1366,7 +1366,7 @@
                 actions: "Command-line operations including file navigation, file reading, script execution (R, Stata, Python, MATLAB), package installation, and VLM queries", 
                 web: "N/A", 
                 tasks: "Reproducability task from code",
-                "execution: "Yes", 
+                execution: "Yes", 
                 examples: "112 task instances", 
                 citeKey: "hu-etal-2025-repro"
             }
@@ -1510,7 +1510,7 @@
             'pmlr-v70-shi17a': 'Shi et al.',
             'liu2018reinforcement': 'Liu et al.',
             'drouin2024workarena': 'Drouin et al.',
-            'boisvert2024workarena++': 'Boisvert et al.',
+            'boisvert2024workarena': 'Boisvert et al.',
             'nogueira2016end': 'Nogueira & Cho',
             'zaheer2022learning': 'Zaheer et al.',
             'nakano2021webgpt': 'Nakano et al.',
