--- a/assets/html/2026-04-27-web-agent/timemachine.html
+++ b/assets/html/2026-04-27-web-agent/timemachine.html
@@ -519,9 +519,9 @@
             'nogueira2016end': 'https://arxiv.org/abs/1607.05673',
             'pmlr-v70-shi17a': 'https://proceedings.mlr.press/v70/shi17a.html',
             'toyama2021androidenv': 'https://arxiv.org/abs/2105.13231',
-            'liu2018reinforcement': 'https://openreview.net/forum?id=Sk5qOMy0W',
-            'jiadom': 'https://openreview.net/forum?id=HJ5xgC9twH',
-            'gurlearning': 'https://openreview.net/forum?id=Hyl7ygHYPM',
+            'liu2018reinforcement': 'https://arxiv.org/abs/1802.08802',
+            'jiadom': 'https://arxiv.org/abs/1902.07257',
+            'gurlearning': 'https://arxiv.org/abs/1812.09195',
             'nakano2021webgpt': 'https://arxiv.org/abs/2112.09332',
             'zaheer2022learning': 'https://arxiv.org/abs/2206.15472',
             'pmlr-v162-humphreys22a': 'https://proceedings.mlr.press/v162/humphreys22a.html'
