--- a/assets/html/2026-04-27-web-agent/observatory.html
+++ b/assets/html/2026-04-27-web-agent/observatory.html
@@ -1533,7 +1533,9 @@
             'pasupat-liang-2014-zero': 'https://aclanthology.org/P14-1037',
             'nogueira2016end': 'https://arxiv.org/abs/1607.05673',
             'zaheer2022learning': 'https://arxiv.org/abs/2206.15472',
-            'liu2018reinforcement': 'https://openreview.net/forum?id=Sk5qOMy0W'
+            'liu2018reinforcement': 'https://openreview.net/forum?id=Sk5qOMy0W',
+            'swebenchverifiedblog': 'https://openai.com/index/introducing-swe-bench-verified/',
+            'jimenezswe':'https://arxiv.org/abs/2310.06770'
         };
 
         // Style a single d-cite element
